@@ -611,6 +611,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4824) Separate out IE7 CSS compat hacks, fix for RTL pages
 * Added support for wikidiff2 and similar external diff engines.
 * Allow cookies to be shared between multiple wikis with a shared user database
+* Blocking some Unicode whitespace characters in usernames. Should check
+  if some or all should be blocked from all page titles.
 
 
 === Caveats ===
